# MeetingScribe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  cli.py  project.yml  pyproject.toml  tray.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MeetingScribe/: Info.plist  MeetingScribe-Release.entitlements
MeetingScribe/App/: AppDelegate.swift  MeetingScribeApp.swift  SettingsView.swift
MeetingScribe/Core/: AudioRecorder.swift  ClaudeProcessor.swift  MeetingSession.swift  MicRecorder.swift  ProjectManager.swift  Transcriber.swift
MeetingScribe/Models/: AppConfig.swift  ProjectMeta.swift  RecordingState.swift  TranscriptSegment.swift
MeetingScribe/Views/: MenuBarView.swift  RecordingIndicator.swift  SetupView.swift
assets/: AppIcon.icns
docs/: appcast.xml
meetingscribe/: __init__.py  app.py  app_statusitem.py  app_utils.py  app_window.py  cli_entry.py  config.py  recorder.py  session.py  summarizer.py  transcriber.py
scripts/: build-release.sh  build_app.sh  generate_icon.py  install_linux.sh  install_mac.sh  release.sh
