[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meetingscribe"
version = "0.1.0"
description = "Transcribe and summarize meetings using local Whisper + Claude API"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24,<2",
    "anthropic>=0.25.0",
    "pyannote.audio>=3.1.0",
    "torch>=2.0.0",
    "pystray>=0.19.4",
    "Pillow>=10.0.0",
]

[project.scripts]
meetingscribe = "meetingscribe.cli_entry:main"
meetingscribe-tray = "meetingscribe.cli_entry:tray_main"

[tool.setuptools.packages.find]
where = ["."]
include = ["meetingscribe*"]
